--- a/source/HotelBooking/Views/Hotel/index.cshtml
+++ b/source/HotelBooking/Views/Hotel/index.cshtml
@@ -4,8 +4,11 @@
     Layout = "~/Views/Shared/Hotel_Layout.cshtml";
 }
 
-@Html.TextBoxFor(m => m.TokenId, new { @class = "form-control" })
-@Html.TextBoxFor(m => m.Status, new { @class = "form-control" })
+@*@Html.TextBoxFor(m => m.TokenId, new { @class = "form-control" })
+@Html.TextBoxFor(m => m.Status, new { @class = "form-control" })*@
+<script type="text/html" id="ddlcountry_temp">
+    <option value="${Countrycode}">${Country}</option>
+    </script>
 <div class="search-box-wrapper">
     <div class="search-box container">
         <ul class="search-tabs clearfix">
@@ -21,6 +24,15 @@
             <div class="tab-pane fade active in" id="hotels-tab">
                 <form action="hotel-list-view.html" method="post">
                     <div class="row">
+                        <div class="form-group col-sm-2 col-md-3">
+                            <h4 class="title">Select </h4>
+                            <label>Country</label>
+                            <div class="selector">
+                                <select id="ddlCountry">
+                                  
+                                </select>
+                            </div>
+                            </div>
                         <div class="form-group col-sm-6 col-md-3">
                             <h4 class="title">Where</h4>
                             <label>Your Destination</label>
@@ -402,4 +414,28 @@
         </div>
     </div>
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        BindCountry();
+    });
+    function BindCountry() {
+        $.ajax({
+            url: '@Url.Action("GetCountry", "Hotel")',
+            type:'POST',
+            dataType:'Json',
+            cache: false,
+            success: onsuccesscountry,
+            contentType: "application/Json; charset=utf-8",
+            error: function (xhr, error) {
+                console.debug(xhr); console.debug(error);
+            },
+            
+        });
+    }
+    function onsuccesscountry(data) {
+        $("#ddlCountry").empty();
+        $("#ddlCountry").append($("#ddlcountry_temp").tmpl(data));
+    }
+</script>
