Add Hotel Search

--- a/source/HotelBooking/Views/Hotel/index.cshtml
+++ b/source/HotelBooking/Views/Hotel/index.cshtml
@@ -90,13 +90,13 @@ function isFloat(n) {
                                 <div class="col-xs-6">
                                     <label>Check In</label>
                                     <div class="datepicker-wrap">
-                                        <input type="text" class="input-text full-width" placeholder="mm/dd/yy" />
+                                        <input type="text" class="input-text full-width" id="CheckInDate" placeholder="mm/dd/yy" />
                                     </div>
                                 </div>
                                 <div class="col-xs-6">
                                     <label>Check Out</label>
                                     <div class="datepicker-wrap">
-                                        <input type="text" class="input-text full-width" placeholder="mm/dd/yy" />
+                                        <input type="text" class="input-text full-width" id="CheckOutDate" placeholder="mm/dd/yy" />
                                     </div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@ function isFloat(n) {
                                 <div class="col-xs-4">
                                     <button type="button" onClick="onClick()">+</button>
                                     <button type="button" onClick="onClick_Minus()">-</button>
-                                    <label>Person</label> <a id="clicks">0</a>
+                                    <a id="clicks">0</a><label>Guests</label>
                                     </div>
                                     @*<div class="col-xs-4">
                 <label>Rooms</label>
@@ -122,7 +122,7 @@ function isFloat(n) {
                 </div>
             </div>*@
                                     <div class="col-xs-4">
-                                        <label>Adults</label>
+                                        <label>Rooms</label>
                                         <div class="selector">
                                             <label class="full-width" id="Adult">
                                                 @*<option value="1">01</option>
@@ -511,5 +511,54 @@ function isFloat(n) {
     function onsuccessCity(data) {
         $("#ddlcity").empty();
         $("#ddlcity").append($("#ddlcity_temp").tmpl(data));
+    }
+
+    function GetHotelSearchResult() {
+        debugger;
+        var textVALUE = "";
+        for (i = 0; i < parseInt($('#Adult').text()) ; i++) {
+            textVALUE = textVALUE + "{NoOfAdults: 1,NoOfChild: 1,ChildAge: [5]},";
+        }
+
+        var dataReq = {
+            BookingMode: 1,
+            CheckInDate: $('#CheckInDate').val(),
+            NoOfNights: 3,
+            CountryCode: $('#ddlCountry :selected').val(),
+            CityId: $('#ddlcity :selected').val(),
+            PreferredCurrency: "USD",
+            GuestNationality: "American",
+            NoOfRooms: $('#Adult').val(),
+            MaxRating: 5,
+            MinRating: 1,
+            EndUserIp: "192.168.0.100",
+            TokenId: "ae8d15b7-d06e-4c50-8eca-904e6cc42d1f",
+            RoomGuests: [textVALUE],
+            OrderBy: 13,
+            SortBy: 14,
+            ResultCount: 15,
+            MemberMobileNo: "7405007979",
+            MemberMobilePin: "1021"
+        };
+        $.ajax({
+            url: '@Url.Action("HotelSearchListView", "Hotel")',
+            type: 'POST',
+            dataType: 'Json',
+            data: JSON.stringify(
+            {
+                hotelsearchReq: dataReq
+            }
+        ),
+            cache: false,
+            success: onsuccessHotelSearchResult,
+            contentType: "application/Json; charset=utf-8",
+            error: function (xhr, error) {
+                console.debug(xhr); console.debug(error);
+            },
+
+        });
+    }
+    function onsuccessHotelSearchResult(data) {
+        alert(data);
     }
 </script>
