--- a/source/HotelBooking/Views/Hotel/index.cshtml
+++ b/source/HotelBooking/Views/Hotel/index.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/Hotel_Layout.cshtml";
 }
 
-@Html.TextBoxFor(m => m.TokenId, new { @class = "form-control" })
-@Html.TextBoxFor(m => m.Status, new { @class = "form-control" })
+@*@Html.TextBoxFor(m => m.TokenId, new { @class = "form-control" })
+@Html.TextBoxFor(m => m.Status, new { @class = "form-control" })*@
 <script type="text/html" id="ddlcountry_temp">
     <option value="${Countrycode}">${Country}</option>
     </script>
@@ -49,7 +49,7 @@ function isFloat(n) {
     return Number(n) === n && n % 1 !== 0;
 }
 </script>
-</script>
+
 <script type="text/html" id="ddlcity_temp">
     <option value="${Cityid}" data-tokens="${Destination}">${Destination}</option>
 </script>
@@ -66,7 +66,7 @@ function isFloat(n) {
 
         <div class="search-tab-content">
             <div class="tab-pane fade active in" id="hotels-tab">
-                <form action="hotel-list-view.html" method="post">
+                <form action="" method="post">
                     <div class="row">
                         <div class="form-group col-sm-2 col-md-3">
                             <h4 class="title">Select </h4>
@@ -103,12 +103,11 @@ function isFloat(n) {
                         </div>
 
                         <div class="form-group col-sm-6 col-md-3">
-                            <h4 class="title">Who</h4>
+                            <h4 class="title">Person(<a id="clicks">0</a>)</h4>
                             <div class="row">
                                 <div class="col-xs-4">
                                     <button type="button" onClick="onClick()">+</button>
                                     <button type="button" onClick="onClick_Minus()">-</button>
-                                    <a id="clicks">0</a><label>Guests</label>
                                     </div>
                                     @*<div class="col-xs-4">
                 <label>Rooms</label>
@@ -122,33 +121,20 @@ function isFloat(n) {
                 </div>
             </div>*@
                                     <div class="col-xs-4">
-                                        <label>Rooms</label>
+                                        <h3 style="margin-top:-36%">Rooms</h3>
                                         <div class="selector">
-                                            <label class="full-width" id="Adult">
-                                                @*<option value="1">01</option>
-                                                <option value="2">02</option>
-                                                <option value="3">03</option>
-                                                <option value="4">04</option>*@
+                                            <label class="full-width" id="Adult" style="padding-top:12px!important">
+                                                
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="col-xs-4">
-                                        <label>Kids</label>
-                                        <div class="selector">
-                                            <select class="full-width">
-                                                <option value="1">01</option>
-                                                <option value="2">02</option>
-                                                <option value="3">03</option>
-                                                <option value="4">04</option>
-                                            </select>
-                                        </div>
-                                    </div>
+                                    
                                 </div>
                         </div>
 
-                        <div class="form-group col-sm-6 col-md-2 fixheight">
+                        <div class="form-group col-sm-6 col-md-2 fixheight" style="padding-top:16px!important">
                             <label class="hidden-xs">&nbsp;</label>
-                            <button type="submit" class="full-width icon-check animated" data-animation-type="bounce" data-animation-duration="1">SEARCH NOW</button>
+                            <button  class="full-width icon-check animated" data-animation-type="bounce" data-animation-duration="1" onclick="GetHotelSearchResult()">SEARCH NOW</button>
                         </div>
                     </div>
                 </form>
@@ -517,41 +503,68 @@ function isFloat(n) {
         debugger;
         var textVALUE = "";
         for (i = 0; i < parseInt($('#Adult').text()) ; i++) {
-            textVALUE = textVALUE + "{NoOfAdults: 1,NoOfChild: 1,ChildAge: [5]},";
+            textVALUE = textVALUE + "{NoOfAdults: 1,NoOfChild: 1,ChildAge: [5]}";
+        }
+        var dataReq = {
+            "BookingMode": 1,
+            "CheckInDate": "10/09/2016",
+            "NoOfNights": 3,
+            "CountryCode": "US",
+            "CityId": "1012",
+            "PreferredCurrency": "USD",
+            "GuestNationality": "American",
+            "NoOfRooms": 1,
+            "MaxRating": 5,
+            "MinRating": 2,
+            "EndUserIp": "192.168.0.100",
+            "TokenId": "ae8d15b7-d06e-4c50-8eca-904e6cc42d1f",
+            "RoomGuests": [
+              {
+                  "NoOfAdults": 1,
+                  "NoOfChild": 1,
+                  "ChildAge": [5]
+              }],
+            "OrderBy": 13,
+            "SortBy": 14,
+            "ResultCount": 15,
+            "MemberMobileNo": "7405007979",
+            "MemberMobilePin": "1021"
         }
 
-        var dataReq = {
-            BookingMode: 1,
-            CheckInDate: $('#CheckInDate').val(),
-            NoOfNights: 3,
-            CountryCode: $('#ddlCountry :selected').val(),
-            CityId: $('#ddlcity :selected').val(),
-            PreferredCurrency: "USD",
-            GuestNationality: "American",
-            NoOfRooms: $('#Adult').val(),
-            MaxRating: 5,
-            MinRating: 1,
-            EndUserIp: "192.168.0.100",
-            TokenId: "ae8d15b7-d06e-4c50-8eca-904e6cc42d1f",
-            RoomGuests: [textVALUE],
-            OrderBy: 13,
-            SortBy: 14,
-            ResultCount: 15,
-            MemberMobileNo: "7405007979",
-            MemberMobilePin: "1021"
-        };
+        //var dataReq = {
+        //    BookingMode: 1,
+        //    CheckInDate: $('#CheckInDate').val(),
+        //    NoOfNights: 3,
+        //    CountryCode: $('#ddlCountry :selected').val(),
+        //    CityId: $('#ddlcity :selected').val(),
+        //    PreferredCurrency: "USD",
+        //    GuestNationality: "American",
+        //    NoOfRooms: $('#Adult').text(),
+        //    MaxRating: 5,
+        //    RoomGuests: [textVALUE],
+        //    MinRating: 1,
+        //    OrderBy: 13,
+        //    SortBy: 14,
+        //    ResultCount: 15,
+        //    EndUserIp: "192.168.0.100",
+        //    TokenId: "ae8d15b7-d06e-4c50-8eca-904e6cc42d1f",                       
+        //    MemberMobileNo: "7405007979",
+        //    MemberMobilePin: "1021"
+        //};
         $.ajax({
             url: '@Url.Action("HotelSearchListView", "Hotel")',
             type: 'POST',
             dataType: 'Json',
             data: JSON.stringify(
-            {
-                hotelsearchReq: dataReq
-            }
-        ),
+                 dataReq 
+                ),
+                
             cache: false,
             success: onsuccessHotelSearchResult,
-            contentType: "application/Json; charset=utf-8",
+            //contentType: "application/Json; charset=utf-8",
+                   headers: {
+                       'Content-Type': 'application/json', 'x-username': 'BIS199', 'x-password': '123456'
+                   },
             error: function (xhr, error) {
                 console.debug(xhr); console.debug(error);
             },
